# trade_tip

./: ChangeLog.md  README.md  README.zh.md  UpdateRecord.md  components.d.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.vue  icons.js  main.ts  router.ts  store.ts  styles.css  type.ts  utils.ts
src-tauri/: .taurignore  Cargo.toml  data.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/: log4rs.yaml
src-tauri/data/: log4rs.yaml
src-tauri/icons/: icon.icns
src-tauri/src/: app_errors.rs  main.rs
src-tauri/src/cache/: config_state.rs  intraday_chart_cache.rs  mod.rs
src-tauri/src/config/: config.rs  mod.rs
src-tauri/src/dtos/: graphic_dto.rs  mod.rs  stock.rs  stock_dto.rs  stock_info.rs
src-tauri/src/entities/: graphic.rs  group_stock_relation.rs  mod.rs  postion.rs  prelude.rs  stock_data.rs  stock_data_time.rs  stock_group.rs  stock_info.rs  table.rs  transaction_record.rs
src-tauri/src/service/: mod.rs
src-tauri/src/service/command/: command.rs  handle.rs  handle_data.rs  mod.rs  tauri_command.rs
src-tauri/src/service/curd/: graphic_curd.rs  group_stock_relation_curd.rs  mod.rs  position_curd.rs  stock_data_curd.rs  stock_group_curd.rs  stock_info_curd.rs  transaction_record_curd.rs
src-tauri/src/service/http/: futures.rs  http.rs  http_client.rs  mod.rs
src-tauri/src/utils/: mod.rs  stock_util.rs
src/components/: CanT.vue  CandleChart.vue  CandleChartNewNew.vue  ElSearch.vue  GroupTab.vue  GroupTabNew.vue  Header.vue  MainLayout.vue  NewCandleChart.vue  NewNewCandleChart.vue  Position.vue  Search.vue  Setting.vue  StockTable.vue  StockTable2.vue  SvgIcon.vue  Tool.vue  TransactionRecord.vue
src/components/PositionComponents/: PositionChart.vue  PositionInsert.vue  PositionUpdate.vue
src/components/StockData/: DataDetail.vue  Detail.vue
src/components/group/: GroupSelect.vue  GroupSelectNew.vue  StockGroupMange.vue  StockGroupSelect.vue
src/components/settingComponents/: DisPlay.vue  FUn.vue
src/components/settingTab/: DisPlay.vue  FUn.vue
src/components/transactionRecordComponents/: RHeader.vue  RTable.vue  RToolBar.vue
