[package]
name = "trade_tip"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta.3"
tauri-plugin-fs = "2.0.0-beta.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
#tauri-plugin-http = "2.0.0-beta.4"
#hyper-tls = "0.6.0"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0.75"
thiserror = "1.0.48"
log4rs = { version = "1.3.0",features = ["file_appender", "pattern_encoder", "threshold_filter"] }
log = "0.4.20"
#sea-query = { version = "0.30.7", features = ["backend-sqlite"] }
#sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ,"debug-print" ] }
arraystring = "0.3.0"

tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

