[package]
name = "trade_tip"
version = "0.6.3"
description = "金融助手"
authors = ["xbss"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
#tauri-build = { version = "2.0.0-rc.0", features = [] }
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
tauri = { version = "2.1.1", features = [] }
tauri-plugin-shell = "2.0.1"
tauri-plugin-fs = "2.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.7.0"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0.95"
thiserror = {version = "1.0.51",features = [] }
log4rs = { version = "1.3.0",features = ["file_appender", "pattern_encoder", "threshold_filter"] }
log = "0.4.20"
#sea-query = { version = "0.30.7", features = ["backend-sqlite"] }
#sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ,"debug-print" ] }
arraystring = "0.3.0"

tracing = "0.1.40"
tracing-subscriber = "0.3.18"

chrono = "0.4"
bytes = "1.6.0"
csv = "1.3.0"
encoding_rs = "0.8.34"
tauri-plugin-dialog = "2"
ashares = "0.1.0"
itertools = "0.14.0"#支持多个迭代器的扁平化组合,计算均线时要用

#ureq = { version = "3.0.11" }

async-recursion = "1.1.1"
[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-single-instance = "2.2.3"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
